--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,7 +87,7 @@ main .row {
     /*border: 3px solid black;*/
     border-radius: 5px;
 
-    margin: 0 -5px;
+    margin: 0 -9%;
 }
 
 
@@ -103,13 +103,14 @@ main .row {
 #degree-F {
     font-size: 24px;
     position: absolute;
+    margin-left: 2%;
     top: 25px;
 }
 #degree-num {
     font-size: 72px;
 }
 #weather-icon {
-   margin-left: 10px;
+    margin-left: 10px;
 }
 
 
@@ -187,10 +188,27 @@ main .row {
     
 }
 
+#form-div {
+    width: 50%;
+    background: #213490;
+}
 
+#number {
+    text-align: center;
+}
 
+#hotel-header {
+    font-size: 22px;
+    font-weight: bold;
+}
 
+#search-button {
+    background-color: rgb(0, 108, 170);
+}
 
+#results-main {
+    margin-bottom: 5%;
+}
 
 /* Materialize */
 
