Empty results div after city change, add ID to zomato div

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -208,6 +208,11 @@ main .row {
 
 #results-main {
     margin-bottom: 5%;
+    text-align: center;
+}
+
+.result-divs {
+    margin: auto;
 }
 
 /* Materialize */
